--- a/Data Summary/Eggplant_datasummary.Rmd
+++ b/Data Summary/Eggplant_datasummary.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Functional Diversity Data Summary"
+title: "Eggplant Data Summary"
 author: "Grace Pratt"
-date: "5/21/2020"
+date: "5/22/2020"
 output: pdf_document
 ---
 
@@ -233,12 +233,6 @@ N
 
 
 
-```{r}
-geo <- all_fungi %>% dplyr::select("Long_point", "Lat_point")
-dist.geo <- distm(geo, fun = distHaversine) 
-
-prop$Lat_point
-```
 
 
 
