deleting old stuff

--- a/Data Summary/withinAcross 05272020.Rmd
+++ b/Data Summary/withinAcross 05272020.Rmd
@@ -95,11 +95,27 @@ leveneTest_table
 
 **Plots** 
 ```{r, echo=FALSE, fig.height = 4, fig.width = 6, fig.align='center', message=FALSE}
-alpha_env(colNames=divIndices,expVar = "pH", color="FarmType",data = alphaDF)
-alpha_env(colNames=divIndices,expVar = "P", color="FarmType",data = alphaDF)
-alpha_env(colNames=divIndices,expVar = "TOC", color="FarmType",data = alphaDF)
-alpha_env(colNames=divIndices,expVar = "N", color="FarmType",data = alphaDF)
-alpha_env(colNames=divIndices,expVar = "NP_ratio", color="FarmType",data = alphaDF)
+pH_alpha <- alpha_env(colNames=divIndices,expVar = "pH", color="FarmType",data = alphaDF)
+plot_grid(pH_alpha[[1]], pH_alpha[[2]], pH_alpha[[3]], pH_alpha[[4]], pH_alpha[[5]], ncol=3)
+plot_grid(pH_alpha[[6]], pH_alpha[[7]], pH_alpha[[8]], pH_alpha[[9]], pH_alpha[[10]], ncol=3)
+
+
+P_alpha <- alpha_env(colNames=divIndices,expVar = "P", color="FarmType",data = alphaDF)
+plot_grid(P_alpha[[1]], P_alpha[[2]], P_alpha[[3]], P_alpha[[4]], P_alpha[[5]], ncol=3)
+plot_grid(P_alpha[[6]], P_alpha[[7]], P_alpha[[8]], P_alpha[[9]], P_alpha[[10]], ncol=3)
+
+TOC_alpha <- alpha_env(colNames=divIndices,expVar = "TOC", color="FarmType",data = alphaDF)
+plot_grid(TOC_alpha[[1]], TOC_alpha[[2]], TOC_alpha[[3]], TOC_alpha[[4]], TOC_alpha[[5]], ncol=3)
+plot_grid(TOC_alpha[[6]], TOC_alpha[[7]], TOC_alpha[[8]], TOC_alpha[[9]], TOC_alpha[[10]], ncol=3)
+
+N_alpha <- alpha_env(colNames=divIndices,expVar = "N", color="FarmType",data = alphaDF)
+plot_grid(N_alpha[[1]], N_alpha[[2]], N_alpha[[3]], N_alpha[[4]], N_alpha[[5]], ncol=3)
+plot_grid(N_alpha[[6]], N_alpha[[7]], N_alpha[[8]], N_alpha[[9]], N_alpha[[10]], ncol=3)
+
+NP_ratio_alpha<- alpha_env(colNames=divIndices,expVar = "NP_ratio", color="FarmType",data = alphaDF)
+plot_grid(NP_ratio_alpha[[1]], NP_ratio_alpha[[2]], NP_ratio_alpha[[3]], NP_ratio_alpha[[4]], NP_ratio_alpha[[5]], ncol=3)
+plot_grid(NP_ratio_alpha[[6]], NP_ratio_alpha[[7]], NP_ratio_alpha[[8]], NP_ratio_alpha[[9]], NP_ratio_alpha[[10]], ncol=3)
+
 
 ```
 
